# Absurdia-Visual-Novel

./: CMakeLists.txt  README.md  build.ps1  build.sh  main.cpp  run.ps1  run.sh  setup.ps1  setup.sh
src/: main.cpp  umum.cpp  umum.hpp
src/engine/: canvas.cpp  canvas.hpp  engine.cpp  engine.hpp  engine_window.hpp  page_manager.cpp  page_manager.hpp  ui.cpp  ui.hpp
src/pages/: page.hpp
src/pages/about/: about.cpp  about.hpp
src/pages/game/: game.cpp  game.hpp  graph.cpp  graph.hpp  scene_manager.cpp  scene_manager.hpp
src/pages/load_game/: load_game.cpp  load_game.hpp
src/pages/main_menu/: main_menu.cpp  main_menu.hpp
src/pages/new_game/: new_game.cpp  new_game.hpp
src/scenes/: scene.hpp
src/scenes/ending_a/: ending_a.cpp  ending_a.hpp
src/scenes/ending_b/: ending_b.cpp  ending_b.hpp
src/scenes/ending_c/: ending_c.cpp  ending_c.hpp
src/scenes/ending_d/: ending_d.cpp  ending_d.hpp
src/scenes/scene_1/: scene_1.cpp  scene_1.hpp  scene_1_part2.cpp  scene_1_part2.hpp  scene_1_part3.cpp  scene_1_part3.hpp
src/scenes/scene_10/: scene_10.cpp  scene_10.hpp
src/scenes/scene_11/: scene_11.cpp  scene_11.hpp
src/scenes/scene_12/: scene_12.cpp  scene_12.hpp
src/scenes/scene_13/: scene_13.cpp  scene_13.hpp
src/scenes/scene_14/: scene_14.cpp  scene_14.hpp
src/scenes/scene_15/: scene_15.cpp  scene_15.hpp
src/scenes/scene_16/: scene_16.cpp  scene_16.hpp
src/scenes/scene_17/: scene_17.cpp  scene_17.hpp
src/scenes/scene_18/: scene_18.cpp  scene_18.hpp
src/scenes/scene_19/: scene_19.cpp  scene_19.hpp
src/scenes/scene_2/: scene_2.cpp  scene_2.hpp
src/scenes/scene_20/: scene_20.cpp  scene_20.hpp
src/scenes/scene_21/: scene_21.cpp  scene_21.hpp
src/scenes/scene_22/: scene_22.cpp  scene_22.hpp
src/scenes/scene_23/: scene_23.cpp  scene_23.hpp
src/scenes/scene_24/: scene_24.cpp  scene_24.hpp
src/scenes/scene_25/: scene_25.cpp  scene_25.hpp
src/scenes/scene_26/: scene_26.cpp  scene_26.hpp
src/scenes/scene_27/: scene_27.cpp  scene_27.hpp
src/scenes/scene_28/: scene_28.cpp  scene_28.hpp
src/scenes/scene_29/: scene_29.cpp  scene_29.hpp
src/scenes/scene_3/: scene_3.cpp  scene_3.hpp
src/scenes/scene_30/: scene_30.cpp  scene_30.hpp
src/scenes/scene_31/: scene_31.cpp  scene_31.hpp
src/scenes/scene_32/: scene_32.cpp  scene_32.hpp
src/scenes/scene_4/: scene4_part1.cpp  scene4_part1.hpp  scene4_part2.cpp  scene4_part2.hpp  scene_4.cpp  scene_4.hpp
src/scenes/scene_5/: scene_5.cpp  scene_5.hpp
src/scenes/scene_6/: scene_6.cpp  scene_6.hpp
src/scenes/scene_7/: scene_7.cpp  scene_7.hpp
src/scenes/scene_8/: scene_8.cpp  scene_8.hpp
src/scenes/scene_9/: scene_9.cpp  scene_9.hpp
